# nix-workflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checkpoint-plan.md  default.nix  remote-execution-plan.md  roadmap.md  todo.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
cli/: default.nix  pyproject.toml
cli/src/nw/: __init__.py  main.py
cli/tests/: test_integration.py  test_main.py
docs/: api.rst  concepts.rst  conf.py  default.nix  getting-started.rst  index.rst
example/: experiment.nix  test.nix
example/showcase/build-data/: build-data.sh  default.nix
example/showcase/compare/: compare.sh  default.nix
example/showcase/evaluate/: default.nix  evaluate.sh
example/showcase/inference/: default.nix  inference.sh
example/showcase/train/: default.nix  train.sh
lib/: cli_parser.nix  lib.nix
npins/: sources.json
visual/: default.nix  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visual/scripts/: build-data.mjs
visual/server/: api-core.mjs  api.mjs  standalone.mjs
visual/src/: App.tsx  DagView.tsx  FileExplorer.tsx  demo-data.ts  layout.ts  types.ts
