[project]
name = "nw"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gzbfgjf", email = "142939562+gzbfgjf2@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest", "ruff"]

[project.scripts]
nw = "nw.main:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.basedpyright]
typeCheckingMode = "standard"
